add_library(argparser "application.cpp" "services/command_parser.cpp" "services/command_parser.h" "enums/command_type.h" "models/icommand.h" "enums/lexeme_type.h" "services/lexeme_validator.h" "services/lexeme_validator.cpp" "models/icommand.cpp" "entities/table.h" "services/lexeme_parser.h" "services/lexeme_parser.cpp" "entities/club.h" "entities/table.cpp" "entities/club.cpp" "models/commands.cpp")